# suitesparseget_py

./: README.md  pyproject.toml  requirements.txt  suitesparseget.py
.github/workflows/: python-package.yml
examples/: get_all_fieldnames.py  get_individual_matrix.py  ssget_example.py
suitesparseget/: __init__.py  suitesparseget.py
