[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suitesparsegetpy"
version = "0.1.0"
description = "Get SuiteSparse matrices into Python"
authors = [{ name = "Bernie Roesler", email = "bernard.roesler@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.3",
    "pandas>=2.3",
    "pymatreader>=1.1",
    "Requests>=2.32",
    "scipy>=1.16"
]

[tool.setuptools]
packages = ["suitesparseget"]
